--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
     </div>
 
     <div class="chef-detail">
-      <img src="images/bevarage chef.jpg" alt="Chef Ahmed">
+      <img src="images/deink chef.jpg" alt="Chef Ahmed">
       <div>
         <h3>Chef Ahmed</h3>
         <p>Ahmed mixes refreshing cold drinks, fresh juices, smoothies, and iced teas. Ensures every sip is perfect.</p>
