--- a/index.html
+++ b/index.html
@@ -15,22 +15,7 @@
 </head>
 
 <body>
-
-  <!-- HEADER / NAVBAR -->
-  <!-- <h1>Bite & Delight</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="menu.html">Menu</a>
-    <a href="cart.html">Cart</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav> -->
-
-
-
   <header>
-
-
     <nav class="navbar navbar-expand-lg navbar-dark custom-nav p-0 m-0 fixed-top">
       <div class="container">
         <div class="brand">
@@ -106,16 +91,11 @@
     <a href="about.html" class="btn">Read More</a>
   </section>
 
-  <!-- CONTACT PREVIEW
-<section id="contact-preview" class="section contact">
-  <h2>Get in Touch</h2>
-  <p>Have a question or want to place an order? Contact us!</p>
-  <a href="contact.html" class="btn">Contact Us</a>
-</section> -->
+
 
   <!-- CHEF SLIDER -->
   <section class="chef-slider-section section">
-    <h2>Meet Our Chefs</h2> <!-- Color matched to About Us (Standard White) -->
+    <h2>Meet Our Chefs</h2>
     <div class="chef-slider">
 
       <div class="chef-card">
