--- a/menu.html
+++ b/menu.html
@@ -151,29 +151,29 @@
       </div>
 
       <!-- Pizza (6 items) -->
-      <div class="card fade-card" data-category="Pizza">''
-        <img src="/images/Margherita Pizza.jpg" alt="">
+      <div class="card fade-card" data-category="Pizza">
+        <img src="images/Margherita Pizza.jpg" alt="">
         <h3>Margherita Pizza</h3>
         <p>Cheesy delight</p>
         <p>Rs 900</p>
         <button onclick="addToCart('Margherita Pizza',900)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Pizza">
-        <img src="/images/chicken pizza.jpg" alt="">
+        <img src="images/chicken pizza.jpg" alt="">
         <h3>Chicken Pizza</h3>
         <p>Spicy & cheesy</p>
         <p>Rs 1200</p>
         <button onclick="addToCart('Chicken Pizza',1200)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Pizza">
-        <img src="/images/bbq.jpg" alt="">
+        <img src="images/bbq.jpg" alt="">
         <h3>BBQ Pizza</h3>
         <p>Smoky flavor</p>
         <p>Rs 1300</p>
         <button onclick="addToCart('BBQ Pizza',1300)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Pizza">
-        <img src="/images/veg.jpg" alt="">
+        <img src="images/veg.jpg" alt="">
         <h3>Veggie Supreme</h3>
         <p>Veg delight</p>
         <p>Rs 950</p>
@@ -187,7 +187,7 @@
         <button onclick="addToCart('Pepperoni Pizza',1250)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Pizza">
-        <img src="/images/Hawaiian.jpg" alt="">
+        <img src="images/Hawaiian.jpg" alt="">
         <h3>Hawaiian Pizza</h3>
         <p>Pineapple & ham</p>
         <p>Rs 1150</p>
@@ -217,21 +217,21 @@
         <button onclick="addToCart('Chicken Burger',600)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Burger">
-        <img src="/images/beef.jpg" alt="">
+        <img src="images/beef.jpg" alt="">
         <h3>Beef Burger</h3>
         <p>Spicy beef patty</p>
         <p>Rs 650</p>
         <button onclick="addToCart('Beef Burger',650)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Burger">
-        <img src="/images/double patty.jpg" alt="">
+        <img src="images/double patty.jpg" alt="">
         <h3>Double Patty Burger</h3>
         <p>Double the fun</p>
         <p>Rs 700</p>
         <button onclick="addToCart('Double Patty Burger',700)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Burger">
-        <img src="/images/veggie delight.jpg" alt="">
+        <img src="images/veggie delight.jpg" alt="">
         <h3>Veggie Delight</h3>
         <p>Fresh vegetables</p>
         <p>Rs 450</p>
@@ -240,35 +240,35 @@
 
       <!-- Pasta (6 items) -->
       <div class="card fade-card" data-category="Pasta">
-        <img src="/images/alfredo.jpg" alt="">
+        <img src="images/alfredo.jpg" alt="">
         <h3>Alfredo Pasta</h3>
         <p>Creamy & delicious</p>
         <p>Rs 750</p>
         <button onclick="addToCart('Alfredo Pasta',750)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Pasta">
-        <img src="/images/Spaghetti.jpg" alt="">
+        <img src="images/Spaghetti.jpg" alt="">
         <h3>Spaghetti Bolognese</h3>
         <p>Classic Italian</p>
         <p>Rs 800</p>
         <button onclick="addToCart('Spaghetti Bolognese',800)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Pasta">
-        <img src="/images/pesto.jpg" alt="">
+        <img src="images/pesto.jpg" alt="">
         <h3>Pesto Pasta</h3>
         <p>Fresh basil sauce</p>
         <p>Rs 700</p>
         <button onclick="addToCart('Pesto Pasta',700)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Pasta">
-        <img src="/images/mac&cheese.jpg" alt="">
+        <img src="images/mac&cheese.jpg" alt="">
         <h3>Mac & Cheese</h3>
         <p>Creamy comfort</p>
         <p>Rs 650</p>
         <button onclick="addToCart('Mac & Cheese',650)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Pasta">
-        <img src="/images/veg pasta.jpg" alt="">
+        <img src="images/veg pasta.jpg" alt="">
         <h3>Veg Pasta</h3>
         <p>Healthy & fresh</p>
         <p>Rs 600</p>
@@ -284,35 +284,35 @@
 
       <!-- Wraps (6 items) -->
       <div class="card fade-card" data-category="Wrap">
-        <img src="/images/chicken wrap.jpg" alt="">
+        <img src="images/chicken wrap.jpg" alt="">
         <h3>Chicken Wrap</h3>
         <p>Spicy chicken</p>
         <p>Rs 500</p>
         <button onclick="addToCart('Chicken Wrap',500)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Wrap">
-        <img src="/images/veggie wrap.jpg" alt="">
+        <img src="images/veggie wrap.jpg" alt="">
         <h3>Veggie Wrap</h3>
         <p>Healthy & fresh</p>
         <p>Rs 450</p>
         <button onclick="addToCart('Veggie Wrap',450)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Wrap">
-        <img src="/images/grilled.jpg" alt="">
+        <img src="images/grilled.jpg" alt="">
         <h3>Grilled Wrap</h3>
         <p>Grilled perfection</p>
         <p>Rs 550</p>
         <button onclick="addToCart('Grilled Wrap',550)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Wrap">
-        <img src="/images/spicy.jpg" alt="">
+        <img src="images/spicy.jpg" alt="">
         <h3>Spicy Wrap</h3>
         <p>Extra kick</p>
         <p>Rs 500</p>
         <button onclick="addToCart('Spicy Wrap',500)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Wrap">
-        <img src="/images/club.jpg" alt="">
+        <img src="images/club.jpg" alt="">
         <h3>Club Wrap</h3>
         <p>Loaded wrap</p>
         <p>Rs 600</p>
@@ -328,42 +328,42 @@
 
       <!-- Drinks (6 items) -->
       <div class="card fade-card" data-category="Drinks">
-        <img src="/images/drink.jpg" alt="">
+        <img src="images/drink.jpg" alt="">
         <h3>Cold Drink</h3>
         <p>Refreshing</p>
         <p>Rs 150</p>
         <button onclick="addToCart('Cold Drink',150)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Drinks">
-        <img src="/images/fresh juice.jpg" alt="">
+        <img src="images/fresh juice.jpg" alt="">
         <h3>Fresh Juice</h3>
         <p>Vitamin rich</p>
         <p>Rs 200</p>
         <button onclick="addToCart('Fresh Juice',200)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Drinks">
-        <img src="/images/smoothie.jpg" alt="">
+        <img src="images/smoothie.jpg" alt="">
         <h3>Smoothie</h3>
         <p>Fruity & creamy</p>
         <p>Rs 250</p>
         <button onclick="addToCart('Smoothie',250)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Drinks">
-        <img src="/images/water.jpg" alt="">
+        <img src="images/water.jpg" alt="">
         <h3>Mineral Water</h3>
         <p>Pure & fresh</p>
         <p>Rs 100</p>
         <button onclick="addToCart('Mineral Water',100)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Drinks">
-        <img src="/images/lemonade.jpg" alt="">
+        <img src="images/lemonade.jpg" alt="">
         <h3>Lemonade</h3>
         <p>Sweet & tangy</p>
         <p>Rs 180</p>
         <button onclick="addToCart('Lemonade',180)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Drinks">
-        <img src="/images/iced tea.jpg" alt="">
+        <img src="images/iced tea.jpg" alt="">
         <h3>Iced Tea</h3>
         <p>Cool & refreshing</p>
         <p>Rs 200</p>
@@ -372,42 +372,42 @@
 
       <!-- Desserts (6 items) -->
       <div class="card fade-card" data-category="Dessert">
-        <img src="/images/Chocolate Lava .jpg" alt="">
+        <img src="images/Chocolate Lava .jpg" alt="">
         <h3>Chocolate Lava Cake</h3>
         <p>Rich & gooey</p>
         <p>Rs 350</p>
         <button onclick="addToCart('Chocolate Lava Cake',350)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Dessert">
-        <img src="/images/browmie.jpg" alt="">
+        <img src="images/browmie.jpg" alt="">
         <h3>Brownie</h3>
         <p>Chocolate delight</p>
         <p>Rs 250</p>
         <button onclick="addToCart('Brownie',250)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Dessert">
-        <img src="/images/fresh-fruity-dessert-wooden-table-generated-by-ai.jpg" alt="">
+        <img src="images/fresh-fruity-dessert-wooden-table-generated-by-ai.jpg" alt="">
         <h3>Ice Cream Sundae</h3>
         <p>Creamy & sweet</p>
         <p>Rs 300</p>
         <button onclick="addToCart('Ice Cream Sundae',300)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Dessert">
-        <img src="/images/closeup-shot-cheesecake-with-jelly-decorated-with-strawberries-berries.jpg" alt="">
+        <img src="images/closeup-shot-cheesecake-with-jelly-decorated-with-strawberries-berries.jpg" alt="">
         <h3>Cheesecake</h3>
         <p>Soft & creamy</p>
         <p>Rs 400</p>
         <button onclick="addToCart('Cheesecake',400)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Dessert">
-        <img src="/images/cupcake 1.jpg" alt="">
+        <img src="images/cupcake 1.jpg" alt="">
         <h3>Mini Cupcakes</h3>
         <p>Sweet bites</p>
         <p>Rs 200</p>
         <button onclick="addToCart('Mini Cupcakes',200)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Dessert">
-        <img src="/images/fruit salad.jpg" alt="">
+        <img src="images/fruit salad.jpg" alt="">
         <h3>Fruit Salad</h3>
         <p>Fresh & healthy</p>
         <p>Rs 220</p>
