--- a/menu.html
+++ b/menu.html
@@ -196,21 +196,21 @@
 
       <!-- Burger (6 items) -->
       <div class="card fade-card" data-category="Burger">
-        <img src="/images/zinger burger.jpg" alt="">
+        <img src="images/zinger burger.jpg" alt="">
         <h3>Zinger Burger</h3>
         <p>Crispy & spicy</p>
         <p>Rs 550</p>
         <button onclick="addToCart('Zinger Burger',550)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Burger">
-        <img src="/images/cheese.jpg" alt="">
+        <img src="images/cheese.jpg" alt="">
         <h3>Cheese Burger</h3>
         <p>Melty cheese inside</p>
         <p>Rs 500</p>
         <button onclick="addToCart('Cheese Burger',500)">Add to Cart</button>
       </div>
       <div class="card fade-card" data-category="Burger">
-        <img src="/images/chicken burger.jpg" alt="">
+        <img src="images/chicken burger.jpg" alt="">
         <h3>Chicken Burger</h3>
         <p>Juicy chicken</p>
         <p>Rs 600</p>
