--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       <!-- DUPLICATE FOR INFINITE SCROLL -->
       <div class="chef-card">
-        <img src="/images/pizza chef.jpg" alt="Chef Marco">
+        <img src="images/pizza chef.jpg" alt="Chef Marco">
         <p>Master of Italian Pizzas 🍕</p>
       </div>
 
